# devtrack

./: .coverage  .dockerignore  .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml
alembic/: env.py
app/: .coverage  auth.py  config.py  database.py  main.py  models.py  schemas.py
app/routers/: applications.py  auth.py
app/tests/: conftest.py  test_applications.py  test_auth.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/api/: client.ts
frontend/src/router/: index.ts
frontend/src/stores/: applications.ts  auth.ts
frontend/src/views/: ApplicationsView.vue  LoginView.vue  RegisterView.vue
tests/: test_config.py
